--- a/src/skybombers.kv
+++ b/src/skybombers.kv
@@ -10,10 +10,11 @@
     #size: 60, 60
     
             
-<SpeedGift>:
+<BaseGift>:
+    src: ""
     Image:
         size: root.size
-        source: "imgs/speedometer-32.png"
+        source: root.src #"imgs/speedometer-32.png"
         strech: True
         keep_ratio: False
         
