--- a/src/skybombers.kv
+++ b/src/skybombers.kv
@@ -89,6 +89,10 @@
     bling: " "
     BoxLayout:
         orientation:  'vertical'
+        MyButton:
+            button_text: "Level %d" % root.level
+            background_color: (0.5,0.3,0.8,1)
+            on_release: root.level_click()
         AutoSizedLabel:
             text: root.bling and root.get_player_text(1) or root.bling
         AutoSizedLabel:
