adding also skybombers.kv

--- a/src/skybombers.kv
+++ b/src/skybombers.kv
@@ -34,7 +34,14 @@
             rgba: self.color
         Line:
             circle: (self.size[0]/2, self.size[1]/2,  (self.size[0]+self.size[1]) / 4.0)
-            
+
+<Portal>:
+
+    canvas.before:
+        Color:
+            rgba: self.color
+        Line:
+            circle: (self.size[0]/2, self.size[1]/2,  (self.size[0]+self.size[1]) / 4.0)
         
 <AirCraft>:
     canvas.before:
