making the portal more awesome, bullets now pass as well! drone is more effected by EMP

--- a/src/skybombers.kv
+++ b/src/skybombers.kv
@@ -36,12 +36,20 @@
             circle: (self.size[0]/2, self.size[1]/2,  (self.size[0]+self.size[1]) / 4.0)
 
 <Portal>:
-
-    canvas.before:
-        Color:
-            rgba: self.color
-        Line:
-            circle: (self.size[0]/2, self.size[1]/2,  (self.size[0]+self.size[1]) / 4.0)
+    
+#     canvas.before:
+#         Color:
+#             rgba: self.color
+#         Line:
+#             circle: (self.size[0]/2, self.size[1]/2,  (self.size[0]+self.size[1]) / 4.0)
+#   
+                
+    Image:
+        size: root.radius*2.1, root.radius*2.1
+        center: root.size[0]/2, root.size[1]/2
+        source: "imgs/portal.png"
+        strech: True
+        keep_ratio: False
         
 <AirCraft>:
     canvas.before:
