adding the invisibily gift :) !!!

--- a/src/skybombers.kv
+++ b/src/skybombers.kv
@@ -58,7 +58,7 @@
         Triangle:
             points: (0,0,self.width,self.height/2, 0, self.height)   
         Color:
-            rgba: 1-(self.lives)/ 5 , (self.lives)/ 5, 0.5, 0.75 * (self.lives)/ 5
+            rgba: 0.0 , 0.94, 0.5, self.a
         Rectangle:
             pos: (-self.width*0.10 ,self.height /10 * (5-self.lives), )
             size: self.width*0.10, (self.height * 0.80) * (self.lives)/ 5
