mine is now invisile

--- a/src/skybombers.kv
+++ b/src/skybombers.kv
@@ -72,7 +72,7 @@
     size_hint: 0.005, 0.005
     canvas:
         Color:
-            rgba: 1,0,0,1
+            rgba: 1,0,0, self.a
         Line:
             circle: (self.size[0]/2, self.size[1]/2, self.radius * self.blow)            
         
