changing Split bullet to colored bullets

--- a/src/skybombers.kv
+++ b/src/skybombers.kv
@@ -97,7 +97,7 @@
     size_hint: 0.005, 0.005
     canvas:
         Color:
-            rgba: 1,0,0, self.a
+            rgba: self.r, self.g, self.b, self.a
         Line:
             circle: (self.size[0]/2, self.size[1]/2, self.radius * self.blow)            
         
