Add points when win. TBD: fix why 11-12 points every win consider when fix this, how to remain with TIE status (flag for first call for example will cause "no tie game"

--- a/src/skybombers.kv
+++ b/src/skybombers.kv
@@ -125,10 +125,16 @@
         text: "power: %d" % root.player.lives
         ratio: 0.8
     AutoSizedLabel:
+
         id:team
-        
         color: root.color
         text: root.player.team or "-"
+        ratio: 0.5
+    AutoSizedLabel:
+
+        id: wins
+        color: root.color
+        text: root.wins or "-"
         ratio: 0.5
     
     
